# OS

./: README.md
coursework/: CMakeLists.txt
coursework/report/: OS_Course_Work.docx
coursework/src/: Allocator.h  BlockAllocator.h  BuddyAllocator.h  main.cpp
lab1/report/: OS_Lab1.docx
lab2/: CMakeLists.txt  main.c
lab2/report/: OS_lab2.docx
lab3/: CMakeLists.txt
lab3/report/: OS_Lab3.docx
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/report/: OS_Lab4.docx
lab4/src/: main.c
lab5/: Makefile
lab5/report/: OS_Lab5.docx
lab5/src/: Makefile  functions.h  functions1.c  functions2.c  main1.c  main2.c  test.c
lab6/: CMakeLists.txt
lab6/report/: OS_Lab6.docx
lab6/src/: main.cpp  node.cpp  topology.h  zmq_f.h
